--- a/src/styles.css
+++ b/src/styles.css
@@ -9,14 +9,18 @@
   --grey: #999;
   --dark-grey: #666;
   --light-grey: #ccc;
+  --un-color: #4b92db;
   --cream: #f9f7ed;
   --transparent-white: #ffffffcc;
   --transition: all ease-out 300ms;
-  --shadow: 0 1px 5px var(--dark-grey);
+  --shadow: 0 3px 10px var(--light-grey);
   --hover-opacity: 0.7;
   --stage-padding: 8px;
   --panels-width: 350px;
-  --border-radius: 3px;
+  --border-radius: 30px;
+  font-family: Helvetica Neue, sans-serif;
+  font-weight: 400;
+  background: white;
 }
 
 /**
@@ -25,7 +29,7 @@
  */
 body {
   font-family: Helvetica Neue, sans-serif;
-  font-weight: normal;
+  font-weight: 400;
   background: white;
   font-size: 0.9em;
   overflow: hidden;
@@ -92,6 +96,11 @@ body {
   position: absolute;
   inset: 0;
 }
+
+.sigma-labels {
+  font-weight: 100;
+}
+
 .controls {
   position: absolute;
   bottom: 40px;
@@ -103,7 +112,7 @@ body {
   justify-content: space-between;
   height: 220px;
 }
-.graph-title {
+.top-left {
   z-index: 1;
   position: absolute;
   top: 0;
@@ -113,14 +122,27 @@ body {
   align-items: flex-start;
   max-width: calc(100vw - var(--panels-width) - 3 * var(--stage-padding));
   padding: var(--stage-padding);
+  /* Space between children */
+  gap: 2em;
 }
-.graph-title h1 {
+
+.top-left > .search-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 0.5em;
+  /* border-radius: 30px; */
+}
+
+.top-left > .graph-title h1 {
   font-size: 1.8em;
+  color: var(--dark-grey);
 }
-.graph-title h1,
-.graph-title h2 {
+.top-left > .graph-title h1,
+.top-left > .graph-title h2 {
   margin: 0;
   background: var(--transparent-white);
+  padding: 0.2em 0.5em;
 }
 .panels {
   position: absolute;
@@ -155,7 +177,8 @@ div.ico > button {
   height: 2em;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
-  color: black;
+  /* color: black; */
+  color: var(--un-color);
   background: white;
   border: none;
   outline: none;
@@ -175,7 +198,7 @@ div.ico > button > * {
 
 button.btn {
   background: white;
-  color: black;
+  color: var(--dark-grey);
   border: 1px solid black;
   outline: none;
   border-radius: var(--border-radius);
@@ -183,9 +206,12 @@ button.btn {
   font-size: 1em;
   font-family: Helvetica Neue, sans-serif;
   cursor: pointer;
+  font-weight: 300;
 }
 button.btn:hover {
-  opacity: var(--hover-opacity);
+  /* opacity: var(--hover-opacity); */
+  color: var(--un-color);
+  border-color: var(--un-color);
 }
 button.btn > * {
   vertical-align: baseline;
@@ -205,6 +231,9 @@ ul > li {
 .text-muted {
   color: var(--dark-grey);
 }
+.icon {
+  color: var(--un-color);
+}
 .text-small {
   font-size: 0.7em;
   vertical-align: baseline;
@@ -219,7 +248,7 @@ ul > li {
  */
 .panel {
   background: white;
-  padding: 1em;
+  padding: 1.3em;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
 }
@@ -229,7 +258,7 @@ ul > li {
 .panel h2 button {
   float: right;
   background: white;
-  border: 1px solid black;
+  border: 1px solid var(--un-color);
   border-radius: var(--border-radius);
   font-size: 1.2em;
   height: 1em;
@@ -240,9 +269,23 @@ ul > li {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--un-color);
+}
+.panel h2 {
+  color: var(--un-color);
+  /*Center on horizontal axis*/
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
 }
 .panel h2 button:hover {
   opacity: var(--hover-opacity);
+}
+
+.panel p {
+  font-weight: 300;
 }
 
 .caption-row input[type="checkbox"] {
@@ -258,6 +301,9 @@ ul > li {
   display: flex;
   flex-direction: row;
   cursor: pointer;
+  font-weight: 300;
+  color: var(--dark-grey);
+  gap: 0.5em;
 }
 .caption-row label:hover {
   opacity: var(--hover-opacity);
@@ -276,7 +322,7 @@ ul > li {
   background-repeat: no-repeat;
   margin-right: 0.2em;
   transition: var(--transition);
-  border: 3px solid var(--dark-grey);
+  border: 1px solid var(--dark-grey);
 }
 .caption-row label .node-label {
   flex-grow: 1;
@@ -319,8 +365,14 @@ ul > li {
   margin-bottom: 0.5em;
   padding: 1em 1em 1em 3em;
   font-family: Helvetica Neue, sans-serif;
-
+  font-weight: 300;
   font-size: 1em;
+
+  ::placeholder {
+    /*Update placeholder font color to UN color*/
+    color: var(--un-color);
+    font-weight: 200;
+  }
 }
 .search-wrapper > .icon {
   position: absolute;
